# otushw

./: .gitignore  README.md
.github/workflows/: cpp-pro.yml
cpp-basic/: REAEME.md
cpp-basic/02/: CMakeLists.txt  example.cpp  hello_world.cpp  move_me_out.cpp
cpp-basic/03/: CMakeLists.txt  arguments.cpp  arguments.hpp  guess_the_number.cpp  randval.cpp  randval.hpp  storage.cpp  storage.hpp
cpp-basic/04/: Ball.cpp  Ball.hpp  Color.cpp  Color.hpp  Physics.cpp  Point.hpp  Velocity.hpp  World.cpp  World.hpp
cpp-basic/05/: chrono_example.cpp  statistics.cpp  tdigest.hpp
cpp-basic/06-07/: CMakeLists.txt
cpp-basic/06-07/src/: main.cpp  sutolist.hpp  sutovec.hpp
cpp-basic/06-07/test/: ctor_dtor_counter.hpp  sutolist_tests.cpp  sutovec_tests.cpp
cpp-basic/08/: CMakeLists.txt  CRC32.cpp  CRC32.hpp  FirstValueWaiter.hpp  IO.cpp  IO.hpp  main.cpp
cpp-basic/09/: CMakeLists.txt  main.cpp
cpp-basic/project/: .clang-tidy  CMakeLists.txt
cpp-basic/project/include/squedl/: squedl.hpp
cpp-basic/project/include/squedl/detail/: expected.hpp
cpp-basic/project/src/: squedl.cpp
cpp-basic/project/test/: CMakeLists.txt  squedl_test.cpp  test_bus_test.cpp
cpp-pro/02/: .clang-format  .clang-tidy  CMakeLists.txt  lib.cpp  lib.hpp  main.cpp  test_ip_filter.cpp  test_version.cpp
cpp-pro/03/: .clang-tidy  CMakeLists.txt  lib.cpp  lib.hpp  main.cpp  test_sutoloc.cpp  test_version.cpp
cpp-pro/04/: .clang-tidy  CMakeLists.txt  lib.hpp
cpp-pro/04/src/: lib.cpp  main.cpp
cpp-pro/04/tests/: test_print_ip.cpp  test_version.cpp
linux-admin-pro/01/: README.md
linux-admin-pro/02/: README.md
linux-admin-pro/03/: README.md
linux-admin-pro/04/: README.md
linux-kernel-dev/01/: config
linux-kernel-dev/02/: Kbuild  Makefile  hw_hello.c
linux-kernel-dev/02/checker/: checker.py  executor.py  main.py  module_ops.py  tests.py
linux-kernel-dev/03/: Kbuild  Makefile  ex_bin_search.c  ex_bitmap.c  ex_list.c  ex_queue.c  ex_rb_tree.c
linux-kernel-dev/03/checker/: base_test.py  main.py  test_bin_search.py  test_bitmap.py  test_list.py  test_queue.py  test_rb_tree.py
linux-kernel-dev/04/: Kbuild  Makefile  ex_mutex.c  ex_rwlock.c  ex_semaphore.c  ex_spinlock.c
linux-kernel-dev/04/checker/: base_test.py  main.py  module_ops.py  test_mutex.py  test_rwlock.py  test_semaphore.py  test_spinlock.py
linux-kernel-dev/project/: Kbuild  Makefile  cpu_load.c
linux-kernel-dev/project/checker/: base_test.py  main.py  module_ops.py  test_cpu_load.py
